fix(layout): adjust height of dialog in mobile view for better visibility

--- a/css/board_second.css
+++ b/css/board_second.css
@@ -200,6 +200,7 @@
 
 #td-subtasks {
   margin-top: auto;
+  overflow-y: auto;
 }
 
 #td-subtasks-list {
