--- a/css/responsive_for_board.css/kb-mobile.css
+++ b/css/responsive_for_board.css/kb-mobile.css
@@ -320,7 +320,7 @@
 @media (max-width: 600px) {
   .td-dialog {
     width: 96vw;
-    height: calc(100vh - 180px);
+    height: calc(100vh - 88px);
     border-radius: 16px;
     padding: 18px 14px 12px;
   }
